feat: complete cloud deployment setup with Atlas MongoDB, CloudAMQP, Railway Keycloak, Dockerfiles, and Vercel support